add the prettier scripts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Um projeto para discussões ligadas a religão cristã",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "next": "15.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
